--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "1.0.1",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/microservices": "8.0.6",
     "@nestjs/platform-express": "^8.0.0",
+    "amqp-connection-manager": "3.6.0",
+    "amqplib": "0.8.0",
+    "cache-manager": "3.4.4",
     "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
     "reflect-metadata": "^0.1.13",
@@ -37,6 +41,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cache-manager": "3.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.0.0",
