--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,14 @@ SERVICE_PORT=4000
 ENVIRONMENT=DEVELOPMENT
 SERVICE_NAME=nestjs-boilerplate
 DEFAULT_PAGINATION_LIMIT=10
+
+# POSTGRES CONFIGURATION --------------------------------------------------
+DATABASE_PORT=5432
+DATABASE_HOST=127.0.0.1
+DATABASE_DB=postgres
+DATABASE_USER=root
+DATABASE_PASSWORD=root
+DATABASE_LOGGING=true
+DATABASE_MAX_CONNECTIONS=20
+DATABASE_MAX_CONNECTION_TIMEOUT_IN_MILLISECONDS=1000
+DATABASE_CONNECTION_ENABLE_SSL=false
