feat(.env.example): update .env.example file regarding rabbitmq

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,9 @@ DATABASE_LOGGING=true
 DATABASE_MAX_CONNECTIONS=20
 DATABASE_MAX_CONNECTION_TIMEOUT_IN_MILLISECONDS=1000
 DATABASE_CONNECTION_ENABLE_SSL=false
+
+# MESSAGE BROKER CONFIGURATION --------------------------------------------
+MESSAGE_BROKER=rabbitmq
+
+# RABBITMQ CONFIGURATION --------------------------------------------------
+RABBITMQ_SERVER_ADDRESS=amqp://admin:admin@localhost:5672/sigma
