--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/amqplib": "0.8.2",
     "@types/cache-manager": "3.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
